Added Authorization and Authentication

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Secret": "Z$$oHoNM@b@TN26hJ$$k9U!79"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=SchoolOfDevs;Trusted_Connection=True;"
   },
